# skillpack

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
registry/: registry.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: test_toml.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  git.rs  lib.rs  main.rs  scanner.rs  symlink.rs  toml_handler.rs
src-tauri/src/codex/: cli.rs  config.rs  manifest.rs  marketplace.rs  mod.rs
src-tauri/src/commands/: config_cmd.rs  featured.rs  link.rs  mcp.rs  mod.rs  pack.rs  plugin.rs  project.rs  skills.rs
src-tauri/tests/: codex_real_config.rs
src/components/: ErrorBoundary.tsx  Feedback.tsx
src/components/plugins/: MarketplaceList.tsx  McpServerList.tsx  PluginCard.tsx  PluginDetail.tsx
src/lib/: api.ts  useAsync.ts
src/pages/: Packs.tsx  Plugins.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx  Skills.tsx
