[package]
name = "skillpack"
version = "0.1.0"
edition = "2021"

[lib]
name = "skillpack_core"
path = "src/lib.rs"

[[bin]]
name = "skillpack"
path = "src/main.rs"

[[bin]]
name = "spack"
path = "src/bin/spack.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
git2 = "0.20"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
thiserror = "2"
